# linkedin-advisor

./: .gitignore  README.md  pyproject.toml
advisor/: __init__.py  cli.py  cli_draft.py  cli_social.py  client.py  config.py  db.py  db_schema.py  log.py  middleware.py  pipeline.py  pipeline_social.py  preview.py
advisor/agents/: __init__.py  content_creator.py  copy_agent.py  daily_digest.py  reddit_agent.py  twitter_agent.py
advisor/api/: server.py
advisor/models/: __init__.py  copy.py  post.py  proposal.py  reddit.py  twitter.py
advisor/tools/: __init__.py  copy_research.py  generate_image.py  github_activity.py  read_digest.py  read_repo.py  read_reports.py
advisor/web/: index.html
