[project]
name = "linkedin-advisor"
version = "0.1.0"
description = "AI LinkedIn content advisor — generates post drafts from GitHub activity, news, and research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "httpx",
    "agent-framework==1.2.0",
    "agent-framework-openai==1.2.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "tavily-python>=0.7.24",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "playwright>=1.52.0",
]

[project.scripts]
linkedin-advisor = "advisor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["advisor"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF001"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
